--- a/templates/ConfluenceDataCenterClone.template.yaml
+++ b/templates/ConfluenceDataCenterClone.template.yaml
@@ -89,6 +89,8 @@ Metadata:
         default: Assign public IP
       AutologinCookieAge:
         default: Remember Me cookie expiry
+      CatalinaOpts:
+        default: Catalina options
       CidrBlock:
         default: Permitted IP range
       ClusterNodeMax:
@@ -442,8 +444,8 @@ Parameters:
       - true
       - false
     ConstraintDescription: Must be 'true' or 'false'.
-    Default: true
-    Description: Whether or not app is configured to process/send email
+    Default: false
+    Description: Enable mail processing and sending
     Type: String
   SubDomainName:
     Description: Leave this field blank to use your stack name as the sub-domain.
