--- a/templates/ConfluenceServerClone.template.yaml
+++ b/templates/ConfluenceServerClone.template.yaml
@@ -73,6 +73,7 @@ Metadata:
           - DBAcquireIncrement
           - JvmHeapOverrideConfluence
           - JvmHeapOverrideSynchrony
+          - MailEnabled
           - TomcatAcceptCount
           - TomcatConnectionTimeout
           - TomcatDefaultConnectorPort
@@ -153,6 +154,8 @@ Metadata:
         default: Git repo for local-ansible
       LocalAnsibleGitKey:
         default: Git key for local-ansible
+      MailEnabled:
+        default: Enable App to Process Email
       SSLCertificateARN:
         default: SSL Certificate ARN
       SubDomainName:
@@ -446,6 +449,14 @@ Parameters:
     Default: ''
     Description: if your git repo is private, provide a AWS Systems Manager ParameterStore key name that holds an ssh private key that can access the repo
     Type: String
+  MailEnabled:
+    AllowedValues:
+      - true
+      - false
+    ConstraintDescription: Must be 'true' or 'false'.
+    Default: true
+    Description: Enable mail processing and sending
+    Type: String
   SubDomainName:
     Default: ''
     Description: Leave this field blank to use your stack name as the sub-domain.
@@ -522,6 +533,8 @@ Parameters:
 Conditions:
   DBProvisionedIops:
     !Equals [!Ref DBStorageType, Provisioned IOPS]
+  DisableMail:
+    !Not [!Equals [!Ref MailEnabled, true]]
   DoCollectd:
     !Equals [!Ref StartCollectd, true]
   DoRestoreFromRDSSnapshot:
@@ -883,7 +896,7 @@ Resources:
                     - !If [SSLScheme, "ATL_SSL_PROXY=true", !Ref "AWS::NoValue"]
                     - !Sub ["ATL_AWS_STACK_NAME=${StackName}", StackName: !Ref "AWS::StackName"]
                     - !Sub ["ATL_AUTOLOGIN_COOKIE_AGE=${AutologinCookieAge}", AutologinCookieAge: !Ref AutologinCookieAge]
-                    - !Sub ["ATL_CATALINA_OPTS=\"${CatalinaOpts}\"", CatalinaOpts: !If [OverrideSynchronyHeap, !Join [ ' ', [!Ref CatalinaOpts, !Sub ["-Dsynchrony.memory.max=${JvmHeapOverrideSynchrony}", JvmHeapOverrideSynchrony: !Ref JvmHeapOverrideSynchrony ]]], !Ref CatalinaOpts]]
+                    - !Sub ["ATL_CATALINA_OPTS=\"${CatalinaOpts} ${SynchronyOpts} ${MailOpts}\"", { CatalinaOpts: !Ref CatalinaOpts, SynchronyOpts: !If [OverrideSynchronyHeap, !Sub ["-Dsynchrony.memory.max=${JvmHeapOverrideSynchrony}", JvmHeapOverrideSynchrony: !Ref JvmHeapOverrideSynchrony ], ''], MailOpts: !If [DisableMail, '-Datlassian.mail.senddisabled=true -Datlassian.mail.fetchdisabled=true -Datlassian.mail.popdisabled=true -Dconfluence.disable.mailpolling=true', '']}]
                     - !Sub ["ATL_CONFLUENCE_INSTALLER_DOWNLOAD_URL=${ConfluenceDownloadUrl}", ConfluenceDownloadUrl: !Ref ConfluenceDownloadUrl]
                     - !Sub ["ATL_CONFLUENCE_VERSION=${ConfluenceVersion}", ConfluenceVersion: !Ref ConfluenceVersion]
                     - !Sub ["ATL_DB_ACQUIREINCREMENT=${DBAcquireIncrement}", DBAcquireIncrement: !Ref DBAcquireIncrement]
