ITOPS-747 test for presence of ssm-user GID/UID of 400 before trying to add group and user

--- a/templates/ConfluenceServerClone.template.yaml
+++ b/templates/ConfluenceServerClone.template.yaml
@@ -873,8 +873,10 @@ Resources:
               command: yum-config-manager --enable epel
             020_ssm_group:
               command: groupadd ssm-user --gid 400
+              test: 'test ! $(getent group ssm-user && test $(getent group ssm-user | cut -d: -f3) -eq 400)'
             030_ssm_user:
               command: useradd ssm-user --uid 400 -g ssm-user
+              test: 'test ! $(id -u ssm-user && test $(id -u ssm-user) -eq 400)'
         env:
           packages:
             yum:
