ITOPS-793 Updated local ansible param description to be clearer on the format required

--- a/templates/JiraDataCenterClone.template.yaml
+++ b/templates/JiraDataCenterClone.template.yaml
@@ -499,7 +499,7 @@ Parameters:
     Type: AWS::EC2::KeyPair::KeyName
   LocalAnsibleGitRepo:
     Default: ''
-    Description: For additional node customization, provide repo location to git clone (ie git@bitbucket.org:atlassian/atlassian-local-ansible-example.git)
+    Description: For additional node customization, provide repo location to git clone. This must be in format git@bitbucket.org:atlassian/atlassian-local-ansible-example.git if using Bitbucket Cloud, or ssh://git@stash.example.com:7997/my-local-ansible.git (ie protocol included) if using Bitbucket Server.
     Type: String
   LocalAnsibleGitKey:
     Default: ''
