--- a/quickstarts/quickstart-vpc-for-atlassian-services.yaml
+++ b/quickstarts/quickstart-vpc-for-atlassian-services.yaml
@@ -206,7 +206,7 @@ Outputs:
     Description: Default Ec2 keypair name
     Value: !Ref 'KeyPairName'
     Export:
-      Name: !Join ['', [!Ref 'AWS::StackName', '-defaultkey']]
+      Name: !Join ['', [!Ref 'AWS::StackName', '-DefaultKey']]
   PrivateSubnets:
     Description: A list of 2 Private subnets
     Value: !Join [ ',', [ !GetAtt VPCStack.Outputs.PrivateSubnet1AID, !GetAtt VPCStack.Outputs.PrivateSubnet2AID ]]
