--- a/quickstarts/quickstart-backmac-for-atlassian-services.yaml
+++ b/quickstarts/quickstart-backmac-for-atlassian-services.yaml
@@ -233,8 +233,7 @@ Resources:
 
             yum -y install nfs-utils amazon-efs-utils nvme-cli
 
-            yum -y install yum -y install
-            https://rpmfind.net/linux/fedora/linux/development/rawhide/Everything/x86_64/os/Packages/r/rsync-3.1.3-4.fc29.x86_64.rpm
+            yum -y install https://rpmfind.net/linux/fedora/linux/development/rawhide/Everything/x86_64/os/Packages/r/rsync-3.1.3-4.fc29.x86_64.rpm
 
             ${Param1}chmod u+x /usr/local/bin/parallel_sync
 
