--- a/templates/JiraDataCenterClone.template.yaml
+++ b/templates/JiraDataCenterClone.template.yaml
@@ -485,7 +485,7 @@ Parameters:
   JiraVersion:
     Default: latest
     AllowedPattern: '(\d+\.\d+\.\d+(-?.*))|(latest)'
-    ConstraintDescription: Must be a valid Jira version number, for example 7.2.3. Find valid versions at https://jira.atlassian.com/display/DOC/Jira+Release+Notes
+    ConstraintDescription: Must be a valid Jira version number, for example 7.2.3. Find valid versions at https://jira.atlassian.com/display/DOC/Jira+Release+Notes. If using Jira Service Desk only, must be the Service Desk version number corresponding to the Jira version you require (found at https://marketplace.atlassian.com/apps/1213632/jira-service-desk/version-history).
     Description: The version of Jira to install
     Type: String
   JvmHeapOverride:
