--- a/quickstarts/quickstart-for-atlassian-services.yaml
+++ b/quickstarts/quickstart-for-atlassian-services.yaml
@@ -318,19 +318,19 @@ Outputs:
     Description: Default Ec2 keypair name
     Value: !Ref 'KeyPairName'
     Export:
-      Name: !Join ['', [!Ref 'AWS::StackName', '-DefaultKey']]
+      Name: 'ATL-DefaultKey'
   PrivateSubnets:
     Description: A list of 2 Private subnets
     Value: !Join [ ',', [ !GetAtt VPCStack.Outputs.PrivateSubnet1AID, !GetAtt VPCStack.Outputs.PrivateSubnet2AID ]]
     Export:
-      Name: !Join ['', [!Ref 'AWS::StackName', '-PriNets']]
+      Name: 'ATL-PriNets'
   PublicSubnets:
     Description: A list of 2 Public subnets
     Value: !Join [ ',', [ !GetAtt VPCStack.Outputs.PublicSubnet1ID, !GetAtt VPCStack.Outputs.PublicSubnet2ID ]]
     Export:
-      Name: !Join ['', [!Ref 'AWS::StackName', '-PubNets']]
+      Name: 'ATL-PubNets'
   VPCID:
     Description: Atlassian Services VPC ID
     Value: !GetAtt VPCStack.Outputs.VPCID
     Export:
-      Name: !Join ['', [!Ref 'AWS::StackName', '-VPCID']]
+      Name: 'ATL-VPCID'
