ITOPS-939 expanding scope to include connie validation. not removing param from template yet until AMIs are rebuilt.

--- a/templates/ConfluenceServerClone.template.yaml
+++ b/templates/ConfluenceServerClone.template.yaml
@@ -297,7 +297,7 @@ Parameters:
     Description: If true, a connection test will be performed at every connection checkout to verify that the connection is valid
     Type: String
   DBPreferredTestQuery:
-    Default: 'select 1'
+    Default: 'select version();'
     Description: The query that will be executed for all connection tests
     Type: String
   DBAcquireIncrement:
