--- a/templates/ConfluenceDataCenter.template.yaml
+++ b/templates/ConfluenceDataCenter.template.yaml
@@ -1238,11 +1238,9 @@ Resources:
               command: mkdir -p /media/atl/confluence/shared-home
               ignoreErrors: false
             050_ssm_group:
-              command: groupadd ssm-user --gid 400
-              test: 'test ! $(getent group ssm-user && test $(getent group ssm-user | cut -d: -f3) -eq 400)'
+              command: groupadd ssm-user --gid 400 || groupmod -g 400 ssm-user
             051_ssm_user:
-              command: useradd ssm-user --uid 400 -g ssm-user
-              test: 'test ! $(id -u ssm-user && test $(id -u ssm-user) -eq 400)'
+              command: useradd ssm-user --uid 400 -g ssm-user || usermod -u 400 ssm-user
             052_ensure_ssm:
               command: yum install -y https://s3.amazonaws.com/ec2-downloads-windows/SSMAgent/latest/linux_amd64/amazon-ssm-agent.rpm
               ignoreErrors: true
@@ -1495,9 +1493,9 @@ Resources:
               command: mkdir -p /media/atl/confluence/shared-home
               ignoreErrors: false
             050_ssm_group:
-              command: groupadd ssm-user --gid 400
+              command: groupadd ssm-user --gid 400 || groupmod -g 400 ssm-user
             051_ssm_user:
-              command: useradd ssm-user --uid 400 -g ssm-user
+              command: useradd ssm-user --uid 400 -g ssm-user || usermod -u 400 ssm-user
             052_ensure_ssm:
               command: yum install -y https://s3.amazonaws.com/ec2-downloads-windows/SSMAgent/latest/linux_amd64/amazon-ssm-agent.rpm
             090_bootstrap_local_ansible:
