--- a/quickstarts/quickstart-jira-master.template.yaml
+++ b/quickstarts/quickstart-jira-master.template.yaml
@@ -3,7 +3,7 @@
 # As a rule, we should work to minimize our diffs between these files as best we can, so that future changes are easy to make across all supported CloudFormation templates.
 # Using YAML as our file format will allow us to put a block comment at the top of the file saying exactly this.
 AWSTemplateFormatVersion: 2010-09-09
-Description: Atlassian JIRA Data Center
+Description: Atlassian Jira Data Center
 Metadata:
   AWS::CloudFormation::Interface:
     ParameterGroups:
@@ -304,6 +304,7 @@ Parameters:
   ClusterNodeMin:
     Default: 1
     Type: Number
+    Description: Set to 1 for new deployment. Can be updated post launch.
   ClusterNodeVolumeSize:
     Default: 50
     Description: Size of cluster node root volume in Gb (note - size based upon Application indexes x 4)
