--- a/quickstarts/quickstart-confluence-master.template.yaml
+++ b/quickstarts/quickstart-confluence-master.template.yaml
@@ -61,30 +61,30 @@ Metadata:
       - Label:
           default: Application Tuning (Optional) - dbref - https://confluence.atlassian.com/doc/performance-tuning-130289.html tomcatref - http://tomcat.apache.org/tomcat-8.0-doc/config/http.html
         Parameters:
-            - TomcatContextPath
-            - CatalinaOpts
-            - JvmHeapOverride
-            - JvmHeapOverrideSynchrony
-            - DBPoolMaxSize
-            - DBPoolMinSize
-            - DBTimeout
-            - DBIdleTestPeriod
-            - DBMaxStatements
-            - DBValidate
-            - DBPreferredTestQuery
-            - DBAcquireIncrement
-            - MailEnabled
-            - TomcatAcceptCount
-            - TomcatConnectionTimeout
-            - TomcatDefaultConnectorPort
-            - TomcatEnableLookups
-            - TomcatMaxThreads
-            - TomcatMinSpareThreads
-            - TomcatProtocol
-            - TomcatProxyPort
-            - TomcatRedirectPort
-            - TomcatScheme
-            - TomcatSecure
+          - TomcatContextPath
+          - CatalinaOpts
+          - JvmHeapOverride
+          - JvmHeapOverrideSynchrony
+          - DBPoolMaxSize
+          - DBPoolMinSize
+          - DBTimeout
+          - DBIdleTestPeriod
+          - DBMaxStatements
+          - DBValidate
+          - DBPreferredTestQuery
+          - DBAcquireIncrement
+          - MailEnabled
+          - TomcatAcceptCount
+          - TomcatConnectionTimeout
+          - TomcatDefaultConnectorPort
+          - TomcatEnableLookups
+          - TomcatMaxThreads
+          - TomcatMinSpareThreads
+          - TomcatProtocol
+          - TomcatProxyPort
+          - TomcatRedirectPort
+          - TomcatScheme
+          - TomcatSecure
     ParameterLabels:
       AssociatePublicIpAddress:
         default: Assign public IP
@@ -309,7 +309,7 @@ Parameters:
       - z1d.6xlarge
       - z1d.12xlarge
     ConstraintDescription: Must be an EC2 instance type from the selection list
-    Description: Instance type for the cluster application nodes (note.. for "synchrony-local" collaborative editing you must chose an instance size with over 5gb ram).
+    Description: Instance type for the cluster application nodes (note - for "synchrony-local" collaborative editing you must chose an instance size with over 5 GB RAM).
     Type: String
   ClusterNodeMax:
     Default: 1
@@ -317,9 +317,10 @@ Parameters:
   ClusterNodeMin:
     Default: 1
     Type: Number
+    Description: Set to 1 for new deployment. Can be updated post launch.
   ClusterNodeVolumeSize:
     Default: 50
-    Description: Size of cluster node root volume in Gb (note - size based upon Application indexes x 4)
+    Description: Size of cluster node root volume in GB (note - size based upon Application indexes x 4)
     Type: Number
   CollaborativeEditingMode:
     Default: synchrony-separate-nodes
@@ -327,7 +328,7 @@ Parameters:
       - none
       - synchrony-local
       - synchrony-separate-nodes
-    Description: Collaborative Editing can be off, run locallly on the confluence nodes (leave 1gb heap free for syncrony), or run on a separately autoscaled group of nodes.
+    Description: Collaborative Editing can be off, run locallly on the Confluence nodes (leave 1 GB heap free for Synchrony), or run on a separately autoscaled group of nodes.
     Type: String
   ConfluenceDownloadUrl:
     Default: ''
@@ -480,7 +481,7 @@ Parameters:
     Type: String
   LocalAnsibleGitKey:
     Default: ''
-    Description: if your git repo is private, provide a AWS Systems Manager ParameterStore key name that holds an ssh private key that can access the repo
+    Description: If your git repo is private, provide an AWS Systems Manager ParameterStore key name that holds an SSH private key that can access the repo.
     Type: String
   MailEnabled:
     AllowedValues:
