--- a/templates/ConfluenceDataCenter.template.yaml
+++ b/templates/ConfluenceDataCenter.template.yaml
@@ -317,7 +317,7 @@ Parameters:
       - z1d.6xlarge
       - z1d.12xlarge
     ConstraintDescription: Must be an EC2 instance type from the selection list
-    Description: Instance type for the cluster application nodes (note.. for "synchrony-local" collaborative editing you must chose an instance size with over 5gb ram).
+    Description: Instance type for the cluster application nodes (note.. for "synchrony-local" collaborative editing you must chose an instance size with over 5 GB RAM).
     Type: String
   ClusterNodeMax:
     Default: 1
@@ -327,7 +327,7 @@ Parameters:
     Type: Number
   ClusterNodeVolumeSize:
     Default: 50
-    Description: Size of cluster node root volume in Gb (note - size based upon Application indexes x 4)
+    Description: Size of cluster node root volume in GB (note - size based upon Application indexes x 4)
     Type: Number
   CollaborativeEditingMode:
     Default: synchrony-separate-nodes
@@ -335,7 +335,7 @@ Parameters:
       - none
       - synchrony-local
       - synchrony-separate-nodes
-    Description: Collaborative Editing can be off, run locallly on the confluence nodes (leave 1gb heap free for syncrony), or run on a separately autoscaled group of nodes.
+    Description: Collaborative Editing can be off, run locallly on the confluence nodes (leave 1 GB heap free for syncrony), or run on a separately autoscaled group of nodes.
     Type: String
   ConfluenceDownloadUrl:
     Default: ''
