--- a/quickstarts/quickstart-confluence-master.template.yaml
+++ b/quickstarts/quickstart-confluence-master.template.yaml
@@ -110,12 +110,18 @@ Metadata:
         default: Version *
       CustomDnsName:
         default: Existing DNS name (optional)
+      DBAcquireIncrement:
+          default: DB Acquire Increment
+      DBIdleTestPeriod:
+        default: DB Idle Test Period
       DBInstanceClass:
         default: Database instance class
       DBIops:
         default: RDS Provisioned IOPS
       DBMasterUserPassword:
         default: Master (admin) password *
+      DBMaxStatements:
+        default: DB Max Statements
       DBMultiAZ:
         default: Enable RDS Multi-AZ deployment
       DBPassword:
@@ -124,24 +130,18 @@ Metadata:
         default: DB Pool Maximum Size
       DBPoolMinSize:
         default: DB Pool Minimum Size
-      DBTimeout:
-        default: DB Timeout
-      DBIdleTestPeriod:
-        default: DB Idle Test Period
-      DBMaxStatements:
-        default: DB Max Statements
-      DBValidate:
-        default: DB Validate
       DBPreferredTestQuery:
         default: DB Preferred Test Query
-      DBAcquireIncrement:
-        default: DB Acquire Increment
       DBStorage:
         default: Database storage
       DBStorageEncrypted:
         default: Database encryption
       DBStorageType:
         default: Database storage type
+      DBTimeout:
+        default: DB Timeout
+      DBValidate:
+        default: DB Validate
       DeployEnvironment:
         default: Deployment Environment
       HostedZone:
@@ -205,16 +205,16 @@ Parameters:
     Type: String
   CatalinaOpts:
     Default: ''
-    Description: Pass in any additional jvm options to tune Catalina
+    Description: Pass in any additional JVM options to tune Catalina Tomcat
     Type: String
   CidrBlock:
     Default: '0.0.0.0/0'
     AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
     ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x.
     Description: The CIDR IP range that is permitted to access the Confluence URL. Use 0.0.0.0/0 if you want public access from the internet.
-    Type: String
     MinLength: 9
     MaxLength: 18
+    Type: String
   ClusterNodeInstanceType:
     Default: t3.medium
     AllowedValues:
@@ -316,8 +316,8 @@ Parameters:
     Type: Number
   ClusterNodeMin:
     Default: 1
-    Type: Number
     Description: Set to 1 for new deployment. Can be updated post launch.
+    Type: Number
   ClusterNodeVolumeSize:
     Default: 50
     Description: Size of cluster node root volume in GB (note - size based upon Application indexes x 4)
@@ -364,23 +364,23 @@ Parameters:
       - db.t2.large
       - db.t2.xlarge
       - db.t2.2xlarge
-    ConstraintDescription: Must be a valid RDS instance class, from the selection list
+    ConstraintDescription: Must be a valid RDS instance class from the list
     Description: RDS instance type
     Type: String
   DBIops:
     Default: 1000
-    ConstraintDescription: 'Must be in the range 1000 - 30000'
-    Description: 'Must be in the range of 1000 - 30000 and a multiple of 1000. This value is only used with Provisioned IOPS. Note: The ratio of IOPS per allocated-storage must be between 3.00 and 10.00'
+    ConstraintDescription: Must be in the range 1000 - 30000.
+    Description: 'Must be in the range of 1000 - 30000 and a multiple of 1000. This value is only used with Provisioned IOPS. Note: The ratio of IOPS per allocated-storage must be between 3.00 and 10.00.'
     MinValue: 1000
     MaxValue: 30000
     Type: Number
   DBMasterUserPassword:
     AllowedPattern: '[a-zA-Z0-9]*'
     ConstraintDescription: Must be at least 8 alphanumeric characters.
-    Description: Database admin account password.
-    NoEcho: True
+    Description: Password for the master ('postgres') account.
     MinLength: 8
     MaxLength: 128
+    NoEcho: true
     Type: String
   DBMultiAZ:
     Default: true
@@ -431,7 +431,7 @@ Parameters:
     Type: String
   DBStorage:
     Default: 10
-    Description: Database allocated storage size, in gigabytes (GB)
+    Description: Database allocated storage size, in gigabytes (GB). If you choose Provisioned IOPS, storage should be between 100 and 6144
     Type: Number
   DBStorageEncrypted:
     Default: false
@@ -1062,8 +1062,8 @@ Resources:
     Properties:
       DesiredCapacity: !Ref ClusterNodeMin
       LaunchConfigurationName: !Ref ClusterNodeLaunchConfig
-      MaxSize: !Ref ClusterNodeMax
       MinSize: !Ref ClusterNodeMin
+      MaxSize: !Ref ClusterNodeMax
       TargetGroupARNs: [!Ref MainTargetGroup]
       VPCZoneIdentifier: !Split [ ",", !ImportValue ATL-PriNets]
       Tags:
