--- a/quickstarts/quickstart-crowd-master.template.yaml
+++ b/quickstarts/quickstart-crowd-master.template.yaml
@@ -297,17 +297,17 @@ Parameters:
     Type: Number
   ClusterNodeMin:
     Default: 1
-    Type: Number
     Description: Set to 1 for new deployment. Can be updated post launch.
+    Type: Number
   ClusterNodeVolumeSize:
     Default: 50
     Description: Size of cluster node root volume in GB (note - size based upon Application indexes x 4)
     Type: Number
   CrowdDownloadUrl:
     Default: ''
+    ConstraintDescription: Must be a valid Crowd download url
     Description: This parameter is used to download a custom Crowd version for testing purposes. Leave this parameter blank to automatically download the official version you specified earlier.
     Type: String
-    ConstraintDescription: Must be a valid Crowd download url
   CrowdVersion:
     Default: 3.2.1
     AllowedPattern: '(\d+\.\d+\.\d+(-?.*))'
@@ -316,7 +316,7 @@ Parameters:
     Type: String
   CustomDnsName:
     Default: ''
-    Description: 'Use custom existing DNS name for your Data Center instance. This will take precedence over HostedZone. Please note: you must own the domain and configure it to point at the load balancer.'
+    Description: Use custom existing DNS name for your Data Center instance. This will take precedence over HostedZone. Please note: you must own the domain and configure it to point at the load balancer.
     Type: String
   DBInstanceClass:
     Default: db.t2.medium
@@ -342,8 +342,8 @@ Parameters:
     Type: String
   DBIops:
     Default: 1000
-    ConstraintDescription: 'Must be in the range 1000 - 30000'
-    Description: 'Must be in the range of 1000 - 30000 and a multiple of 1000. This value is only used with Provisioned IOPS. Note: The ratio of IOPS per allocated-storage must be between 3.00 and 10.00'
+    ConstraintDescription: Must be in the range 1000 - 30000
+    Description: Must be in the range of 1000 - 30000 and a multiple of 1000. This value is only used with Provisioned IOPS. Note: The ratio of IOPS per allocated-storage must be between 3.00 and 10.00
     MinValue: 1000
     MaxValue: 30000
     Type: Number
